@@ -6,7 +6,7 @@
     <animation effect="fade" start="100" end="0" time="300">WindowClose</animation>
     <animation effect="fade" start="0" end="100" time="1000" reversible="true">WindowOpen</animation>
     <controls>
-        <include>globalBackground</include>
+		<include>globalBackground</include>
         <include>nowRecording</include>
         <!--Date / time and weather-->
         <control type="group">
