@@ -38,7 +38,7 @@
             <control type="image">
                 <visible>!Skin.HasSetting(useGlobalFanartBackground) + isempty(skin.string(globalBackground))</visible>
                 <include>dimensionsFullscreen</include>
-                <texture>backgrounds/defaultBackground.jpg</texture>
+                <texture>special://skin/extras/backgrounds/background001.jpg</texture>
                 <colordiffuse>6affffff</colordiffuse>
                 <aspectratio>stretch</aspectratio>
                 <animation effect="fade" start="0" end="100" time="1000" condition="window.previous(home)">windowopen</animation>
@@ -187,6 +187,45 @@
 	            <animation effect="rotate" start="0" end="-360" center="auto" time="1200" loop="true" condition="true">conditional</animation>
 	        </control>
 	    </control>
+	</include>
+	<!--menu item user options indicator-->
+	<include name="optionsIndicator">
+		<control type="grouplist">
+            <posx>1110</posx>
+            <posy>-24</posy>
+            <width>8-col</width>
+            <height>1-row</height>
+            <itemgap>0</itemgap>
+            <onleft>50</onleft>
+            <onright>50</onright>
+            <onup>9999</onup>
+            <ondown>9999</ondown>
+            <orientation>horizontal</orientation>
+            <control type="label">
+                <width>30</width>
+                <font>symbol</font>
+                <textcolor>selected</textcolor>
+                <label></label>
+            </control>
+            <control type="label">
+                <width>2-col</width>
+                <font>smallMedium</font>
+                <textcolor>selected</textcolor>
+                <label>$LOCALIZE[31138]</label>
+            </control>
+			<control type="label">
+                <width>30</width>
+                <font>symbol</font>
+                <textcolor>selected</textcolor>
+                <label>©</label>
+            </control>
+            <control type="label">
+                <width>2-col</width>
+                <font>smallMedium</font>
+                <textcolor>selected</textcolor>
+                <label>$LOCALIZE[31139]</label>
+            </control>
+        </control>
 	</include>
     <!--debugging-->
     <include name="DialogID">
