@@ -336,6 +336,7 @@
                             <textcolor>selected</textcolor>
                         </control>
                     </control>
+					<include>optionsIndicator</include>
                 </control>
             </control>
         </control>
