@@ -137,4 +137,6 @@
 	<string id="31135">Eject Disc</string>
 	<string id="31136">Now Playing</string>
 	<string id="31137">Available Content Scrapers:</string>
+	<string id="31138">Item Info</string>
+	<string id="31139">Item Options</string>
 </strings>
